5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1712_2502.log
== SUBMITION (2019-05-15 09:58:41) 
-- CODE:
from math import*
n = int(input())
c = 0 
d = 1 
e = 0 
aux = 1 1
while(c < n):
	e = e + (aux * (1 / (d * (3 ** c))))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		c = c + 1
		d = d + 2
e = e * sqrt(12)
print(round(e, 8))
-- EXECUTION TIME:
0.135265
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 6
    aux = 1 1
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 09:58:54) 
-- CODE:
from math import*
n = int(input())
c = 0 
d = 1 
e = 0 
aux = 1 1
while(c < n):
	e = e + (aux * (1 / (d * (3 ** c))))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
	d = d + 2
e = e * sqrt(12)
print(round(e, 8))
-- EXECUTION TIME:
0.120205
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 6
    aux = 1 1
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 09:59:21) 
-- CODE:
from math import*

n = int(input())

c = 0 # contador para percorrer o laco
d = 1 # denominador
e = 0 # soma inicializada com zero
aux = 1 # variavel auxiliar varia entre -1 e 1
while(c < n):
	e = e + (aux * (1 / (d * (3 ** c))))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
	d = d + 2
e = e * sqrt(12)
print(round(e, 8))
-- EXECUTION TIME:
0.124553
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
